[gd_scene load_steps=8 format=2]

[ext_resource path="res://sounds/metronome01.wav" type="AudioStream" id=1]
[ext_resource path="res://Tempo.gd" type="Script" id=2]
[ext_resource path="res://sounds/DigitalTower.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/metronome02.wav" type="AudioStream" id=4]
[ext_resource path="res://ui/Montserrat-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
extra_spacing_char = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_char = 6
font_data = ExtResource( 5 )

[node name="Tempo" type="Node2D"]
script = ExtResource( 2 )
all_beats_sound = false
measure_sound = true
quart_sound = true

[node name="Timer" type="Timer" parent="."]

[node name="StartTempo" type="Button" parent="."]
margin_left = 832.0
margin_top = 448.0
margin_right = 1103.0
margin_bottom = 494.0
custom_fonts/font = SubResource( 1 )
text = "Start Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopTempo" type="Button" parent="."]
margin_left = 832.0
margin_top = 512.0
margin_right = 1103.0
margin_bottom = 558.0
custom_fonts/font = SubResource( 2 )
text = "Stop Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highClic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="lowClic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="StartTempo" to="." method="_on_StartTempo_pressed"]
[connection signal="pressed" from="StopTempo" to="." method="_on_StopTempo_pressed"]
